# mqttbridge

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
config/: config.toml
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  main.cc
examples/domainsocket/client/: CMakeLists.txt  main.cc
examples/domainsocket/server/: CMakeLists.txt  main.cc
examples/mqttclient/: CMakeLists.txt  main.cc
examples/server/: CMakeLists.txt  main.cc
examples/transport/: CMakeLists.txt  main.cc
include/domain_socket/: client.h  server.h
include/mqttbridge/: blockingqueue.h  config.h  imqttclient.h  itransport.h  logger.h  message.h  mqttbridge.h
src/: CMakeLists.txt  client.cc  main.cc  server.cc
src/bridge/: CMakeLists.txt  mqttbridge.cc
src/config/: CMakeLists.txt  config.cc
src/domainsocket/: CMakeLists.txt  client.cc  client.h  server.cc  server.h
src/logger/: CMakeLists.txt  logger.cc
src/mqttclient/: CMakeLists.txt  mosquitto_mqttclient.cc  mosquitto_mqttclient.h
src/transport/: CMakeLists.txt  domainsocket_transport.cc  domainsocket_transport.h  transport_factory.cc
